--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -58,25 +58,25 @@
   }
 
   &.btn-default {
-    .btn-type-mixin(@primary, rgba(255,255,255 ,0.1), @primary)
+    .btn-type-mixin(@primary, rgba(255,255,255,0.1), @primary)
   }
   &.btn-link {
     .btn-type-mixin(@primary, rgba(0,0,0,0), rgba(0,0,0,0))
   }
   &.btn-primary {
-    .btn-type-mixin(@light, @primary, @primary)
+    .btn-type-mixin(@inverted, @primary, @primary)
   }
   &.btn-success {
-    .btn-type-mixin(@light, @success, @success)
+    .btn-type-mixin(@inverted, @success, @success)
   }
   &.btn-info {
-    .btn-type-mixin(@light, @info, @info)
+    .btn-type-mixin(@inverted, @info, @info)
   }
   &.btn-warning {
-    .btn-type-mixin(@light, @warning, @warning)
+    .btn-type-mixin(@inverted, @warning, @warning)
   }
   &.btn-danger {
-    .btn-type-mixin(@light, @danger, @danger)
+    .btn-type-mixin(@inverted, @danger, @danger)
   }
 
   &.btn-xs {
