--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -10,9 +10,8 @@
     z-index: 10;
     width: auto;
     margin: 2px 5px;
-    background: @light;
-    border: 1px solid darken(@bg, 3%);
-    //box-shadow: 0px 4px 15px 0px darken(@bg, 10%);
+    background: @inverted;
+    border: 1px solid @border-color;
     box-shadow: @shadow;
     border-radius: @border-radius;
     top: 100%;
@@ -26,10 +25,10 @@
       font-size: 0.95em;
       border-radius: @border-radius;
       &:hover:not(:active), &:focus:not(:active) {
-        background: darken(@light, 2%)
+        background: darken(@inverted, 2%);
       }
       &:active {
-        background: darken(@light, 5%);
+        background: darken(@inverted, 5%);
       }
       .fa {
         padding: 0 5px;
@@ -37,7 +36,7 @@
     }
     .dropdown-divider {
       height: 1px;
-      background-color: @bg;
+      background-color: darken(@inverted, 2%);
     }
   }
 }
