--- a/src/styles/radio-group.less
+++ b/src/styles/radio-group.less
@@ -45,7 +45,7 @@
   }
 
   &.radio-group-default {
-    .radio-style-mixin(@dark);
+    .radio-style-mixin(@default);
   }
   &.radio-group-primary {
     .radio-style-mixin(@primary);
