--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,5 @@
 @import './variables.less';
+@import './reset.less';
 @import './button.less';
 @import './typography.less';
 @import './input.less';
