--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -9,7 +9,7 @@
     cursor: pointer;
   }
   &.tag-default {
-    .tag-style-mixin(@dark);
+    .tag-style-mixin(@default);
   }
   &.tag-primary {
     .tag-style-mixin(@primary);
