--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -13,7 +13,7 @@
     border-radius: @border-radius;
   }
   input::placeholder {
-    color: darken(@light, 15%);
+    color: darken(@inverted, 15%);
   }
   &.disabled {
     &>* {
@@ -27,11 +27,11 @@
   .input-icon-left,
   .input-icon-right {
     position: absolute;
-    color: darken(@light, 30%);
+    color: darken(@inverted, 30%);
   }
   &.input-default {
     .input-icon-left {
-      color: darken(@bg, 15%);
+      color: darken(@app-bg, 15%);
     }
     input {
       border-color: @border-color;
