--- a/src/styles/tooltip.less
+++ b/src/styles/tooltip.less
@@ -70,7 +70,7 @@
     visibility: hidden;
     opacity: 0;
     background-color: @tooltip-background;
-    color: @light;
+    color: @inverted;
     text-align: center;
     padding: 10px 20px;
     border-radius: @border-radius;
