--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,6 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin-ext');
-@font-family: 'Lato', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700&amp;subset=latin-ext');
 
+@font-family: 'Lato', sans-serif;
+@app-bg: #f9f9f9;
+
+@default: #383838;
+@inverted: #fff;
 
 @primary: #005d98;
 @success: #00C851; 
@@ -8,15 +12,8 @@
 @warning: #ffbb33;
 @danger: #ff4444;
 
-@light: #fff;
-@dark: #505050;
-@muted: #9c9c9c;
-
-@bg: #f9f9f9;
-@border-color: #e0e0e0;
-
+@border-color: darken(@inverted, 5%);
 @shadow: 0 0 15px #e8e8e8;
 
 @font-size: 14px;
 @border-radius: 2px;
-
