--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -8,7 +8,8 @@
     display: block;
     outline: none;
     padding: 4px 10px;
-    border-width: 1px;
+    background: transparent;
+    border-width: 0 0 2px 0;
     border-style: solid;
     border-radius: @border-radius;
   }
@@ -34,7 +35,7 @@
       color: darken(@app-bg, 15%);
     }
     input {
-      border-color: @border-color;
+      border-color: darken(@border-color, 5%);
     }
   }
   &.input-primary {
