Badge padding, toggle switch off shadow updated

--- a/src/styles/badge.less
+++ b/src/styles/badge.less
@@ -1,6 +1,6 @@
 .badge {
   display: inline-block;
-  padding: 2px 7px;
+  padding: 0 7px;
   margin: 5px;
   border-radius: 25px;
   &.badge-default {
