--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -270,7 +270,7 @@
   }
   &.select-default {
     .select-icon-left {
-      color: darken(@app-bg, 15%);
+      color: darken(@app-bg-color, 15%);
     }
     .Select-control {
       border-color: @border-color;
