--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,5 @@
 @import './variables.less';
+@import './base.less';
 @import './reset.less';
 @import './button.less';
 @import './typography.less';
@@ -12,16 +13,5 @@
 @import './form-group.less';
 @import './tag.less';
 @import './badge.less';
-
-.hidden {
-  display: none !important;
-}
-.invisible {
-  visibility: hidden !important;
-}
-.clickable {
-  cursor: pointer !important;
-}
-.disabled {
-  cursor: not-allowed;
-}
+@import './app-container.less';
+@import './navbar.less';
