--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -12,7 +12,7 @@
     margin: 2px 5px;
     background: @inverted;
     border: 1px solid @border-color;
-    box-shadow: @shadow;
+    box-shadow: 0 5px 15px darken(@border-color, 5%);
     border-radius: @border-radius;
     top: 100%;
     right: 0;
