--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -32,7 +32,7 @@
   }
   &.input-default {
     .input-icon-left {
-      color: darken(@app-bg, 15%);
+      color: darken(@app-bg-color, 15%);
     }
     input {
       border-color: darken(@border-color, 5%);
