--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700&amp;subset=latin-ext');
 
 @font-family: 'Lato', sans-serif;
-@app-bg: #f9f9f9;
+@app-bg-color: #f9f9f9;
 
 @default: #383838;
 @inverted: #fff;
@@ -17,3 +17,7 @@
 
 @font-size: 14px;
 @border-radius: 2px;
+
+@app-container-max-width: 1200px;
+
+@navbar-height: 60px;
