--- a/src/styles/app-container.less
+++ b/src/styles/app-container.less
@@ -3,11 +3,11 @@
   margin: auto;
   height: 100vh;
   width: 100vw;
+  overflow-x: wrap;
+  overflow-y: scroll;
   background: @app-bg-color;
   &.app-container-boxed {
     max-width: @app-container-max-width;
-    border-left: 1px solid @border-color;
-    border-right: 1px solid @border-color;
-    box-shadow: 0 0 15px #d0d0d0;
+    box-shadow: 0 0 15px darken(@border-color, 15%);
   }
 }
