--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -3,11 +3,13 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: ~'calc(100% + 2px)';
-  margin-left: -1px;
+  width: 100%;
   height: @navbar-height;
   background-color: @primary;
   box-sizing: border-box;
+  a {
+    text-decoration: none;
+  }
   .navbar-brand {
     flex-grow: 0;
     display: flex;
