--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -11,8 +11,7 @@
     width: auto;
     margin: 2px 5px;
     background: @inverted;
-    border: 1px solid @border-color;
-    box-shadow: 0 5px 15px darken(@border-color, 5%);
+    box-shadow: @shadow;
     border-radius: @border-radius;
     top: 100%;
     right: 0;
