--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -7,6 +7,7 @@
   height: @navbar-height;
   background-color: @primary;
   box-sizing: border-box;
+  box-shadow: @shadow;
   a {
     text-decoration: none;
   }
