--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -93,7 +93,7 @@ a, a:visited, a:hover, a:active {
   &:not(.text-muted) {
     color: @color;
   }
-  .text-muted {
+  &.text-muted {
     color: tint(@color);
   }
 }
