--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -13,11 +13,11 @@
 @danger: #ff4444;
 
 @border-color: darken(@inverted, 5%);
-@shadow: 0 0 15px #e8e8e8;
+@shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0.2);
 
 @font-size: 14px;
 @border-radius: 2px;
 
-@app-container-max-width: 1200px;
+@app-container-max-width: 1300px;
 
 @navbar-height: 60px;
