--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -6,6 +6,9 @@
 @default: #383838;
 @inverted: #fff;
 
+@default-overlay: fade(@default, 80%);
+@inverted-overlay: fade(@inverted, 80%);
+
 @primary: #005d98;
 @success: #00C851; 
 @info: #0099CC;
