--- a/src/styles/box.less
+++ b/src/styles/box.less
@@ -16,6 +16,7 @@
   .box-content {
     padding: 20px;
     text-align: left;
+    position: relative;
   }
   .box-footer {
     padding: 12px 20px;
