--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -17,6 +17,8 @@
 @import './navbar.less';
 @import './box.less';
 @import './overlay.less';
+@import './header.less';
+@import './breadcrumbs.less';
 
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
