--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   height: @navbar-height;
-  background-color: @primary;
+  background-color: @nav-color;
   box-sizing: border-box;
   box-shadow: @shadow;
   a {
@@ -20,12 +20,12 @@
     cursor: pointer;
     user-select: none;
     padding: 0 20px;
-    border-right: 1px solid lighten(@primary, 3%);
+    //border-right: 1px solid lighten(@nav-color, 3%);
     &:hover:not(:active) {
-      background-color: darken(@primary, 2%);
+      background-color: darken(@nav-color, 2%);
     }
     &:active {
-      background-color: darken(@primary, 4%);
+      background-color: darken(@nav-color, 4%);
     }
     .navbar-brand-logo > img {
       width: 32px;
@@ -47,7 +47,7 @@
       flex-direction: row;
       &:last-child {
         .navbar-menu-item:last-child {
-          border-left: 1px solid lighten(@primary, 3%);
+          //border-left: 1px solid lighten(@nav-color, 3%);
         }
       }
       .navbar-menu-item {
@@ -58,10 +58,10 @@
         align-self: stretch;
         align-items: center;
         &:hover:not(:active) {
-          background-color: darken(@primary, 2%);
+          background-color: darken(@nav-color, 2%);
         }
         &:active {
-          background-color: darken(@primary, 4%);
+          background-color: darken(@nav-color, 4%);
         }
       }
     }
