--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,19 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700&amp;subset=latin-ext');
 
 @font-family: 'Lato', sans-serif;
-@app-bg-color: #f9f9f9;
+@app-bg-color: #EDF0F2;
 
-@default: #383838;
+@default: #424342;
 @inverted: #fff;
 
 @default-overlay: fade(@default, 80%);
 @inverted-overlay: fade(@inverted, 80%);
 
-@primary: #005d98;
-@success: #00C851; 
-@info: #0099CC;
-@warning: #ffbb33;
-@danger: #ff4444;
+@nav-color: #002c41;
+@header-color: #0a4563;
+
+@primary: #2274A5;
+@success: #1CAF4D; 
+@info: #2892D7;
+@warning: #FB8B24;
+@danger: #DB504A;
 
 @border-color: darken(@inverted, 5%);
 @shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0.2);
