--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -3,14 +3,20 @@
   color: @inverted;
   height: 125px;
   padding: 20px;
-  .header-title {
-    margin-top: 20px;
-    .header-title-primary {
-      font-size: 3em;
-      margin: 10px 0;
-    }
-    .header-title-secondary {
-      font-size: 1.2em;
+  .header-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    .header-title {
+      margin-top: 15px;
+      .header-title-primary {
+        font-size: 3em;
+        margin: 10px 0;
+      }
+      .header-title-secondary {
+        font-size: 1.2em;
+      }
     }
   }
 }
