--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -5,6 +5,7 @@
   border-radius: @border-radius;
   cursor: pointer;
   user-select: none;
+  white-space: nowrap;
   transition: background-color 0.25s ease-out, color 0.25s ease-out;
   .fa {
     padding-right: 3px;
