--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -19,6 +19,11 @@
 @import './overlay.less';
 @import './header.less';
 @import './breadcrumbs.less';
+@import './message.less';
+
+.page {
+  padding: 30px;
+}
 
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
