--- a/src/styles/app-container.less
+++ b/src/styles/app-container.less
@@ -1,10 +1,11 @@
 .app-container {
   display: block;
   margin: auto;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: wrap;
-  overflow-y: scroll;
+  min-height: 100vh;
+  //height: 100vh;
+  //width: 100vw;
+  //overflow-x: wrap;
+  //overflow-y: scroll;
   background: @app-bg-color;
   &.app-container-boxed {
     max-width: @app-container-max-width;
