--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -21,6 +21,7 @@
 @import './breadcrumbs.less';
 @import './message.less';
 @import './progress.less';
+@import './alert.less';
 
 .page {
   padding: 30px;
