--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -7,7 +7,7 @@
 @default: #424342;
 @inverted: #fff;
 
-@default-overlay: fade(@default, 80%);
+@default-overlay: rgba(0, 0, 0, 0.7);
 @inverted-overlay: fade(@inverted, 80%);
 
 @nav-color: #002c41;
