--- a/src/styles/overlay.less
+++ b/src/styles/overlay.less
@@ -4,6 +4,12 @@
   top: 0;
   right: 0;
   bottom: 0;
+  z-index: 10;
+  &.overlay-page {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+  }
   &.overlay-default {
     background: @default-overlay;
   }
