--- a/src/styles/alert.less
+++ b/src/styles/alert.less
@@ -16,6 +16,7 @@
     right: -16px;
     position: absolute;
     cursor: pointer;
+    color: fade(@inverted, 50%);
   }
   .alert-content {
     flex-grow: 1;
