--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -22,6 +22,7 @@
 @import './message.less';
 @import './progress.less';
 @import './alert.less';
+@import './modal.less';
 
 .page {
   padding: 30px;
