Style updates for modal and alert close button

--- a/src/styles/alert.less
+++ b/src/styles/alert.less
@@ -17,6 +17,13 @@
     position: absolute;
     cursor: pointer;
     color: fade(@inverted, 50%);
+    &:hover:not(:active),
+    &:focus:not(:active) {
+      color: fade(@inverted, 75%);
+    }
+    &:active {
+      color: @inverted;
+    }
   }
   .alert-content {
     flex-grow: 1;
