--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -13,7 +13,7 @@
 @import './form-group.less';
 @import './tag.less';
 @import './badge.less';
-@import './app-container.less';
+@import './app.less';
 @import './navbar.less';
 @import './box.less';
 @import './overlay.less';
@@ -23,7 +23,13 @@
 @import './progress.less';
 @import './alert.less';
 @import './modal.less';
+@import './footer.less';
+@import './fly.less';
 
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
 .page {
   padding: 30px;
 }
