--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -14,6 +14,7 @@
 @header-color: #0a4563;
 
 @primary: #2274A5;
+@secondary: #EAECED;
 @success: #1CAF4D; 
 @info: #2892D7;
 @warning: #FB8B24;
@@ -28,3 +29,4 @@
 @app-container-max-width: 1300px;
 
 @navbar-height: 60px;
+@footer-height: 40px;
