--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -16,7 +16,7 @@ body, html {
   width: 100%;
 
   background-color: @app-bg-color;
-  background-image: url('http://webapplayers.com/inspinia_admin-v2.7/css/patterns/shattered.png');
+  background-image: url('/bg.png');
   background-repeat: repeat;
 }
 
