Toast component test.

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -25,6 +25,7 @@
 @import './modal.less';
 @import './footer.less';
 @import './fly.less';
+@import './toast.less';
 
 .row {
   margin-left: 0 !important;
