--- a/src/styles/toast.less
+++ b/src/styles/toast.less
@@ -4,30 +4,19 @@
   z-index: 20;
   left: 50%;
   bottom: -60px;
-  opacity: 0;
   transform: translateX(-50%);
   max-width: @app-container-max-width;
   width: 100%;
   height: 60px;
   background: @default;
-  color: @info;
+  color: @inverted;
   display: flex;
   flex-direction: row;
   padding: 20px;
   box-sizing: border-box;
-  transition: bottom .35s ease, opacity .35s ease;
-  font-weight: bold;
+  transition: bottom .2s ease;
   &.toast-opened {
     bottom: 0;
-    opacity: 1;
-  }
-  .toast-countdown {
-    width: 100%;
-    position: absolute;
-    background: @info;
-    height: 3px;
-    top: 0;
-    left: 0;
   }
   .toast-logo {
     flex-grow: 0;
