--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -10,7 +10,8 @@
     box-shadow: 0 0 15px darken(@border-color, 15%);
     .app-navigation, 
     .app-footer,
-    .fly {
+    .fly,
+    .toast {
       max-width: @app-container-max-width;
     }
   }
