--- a/src/styles/toast.less
+++ b/src/styles/toast.less
@@ -5,20 +5,20 @@
   left: 50%;
   bottom: -60px;
   transform: translateX(-50%);
-  max-width: @app-container-max-width;
+  max-width: 100%;
   width: 100%;
   height: 60px;
   background: @default;
-  color: @inverted;
   display: flex;
   flex-direction: row;
   padding: 20px;
   box-sizing: border-box;
   transition: bottom .2s ease;
+  user-select: none;
   &.toast-opened {
     bottom: 0;
   }
-  .toast-logo {
+  .toast-icon {
     flex-grow: 0;
     font-size: 20px;
   }
@@ -26,6 +26,7 @@
     flex-grow: 1;
     font-size: 1.1em;
     padding: 0 20px;
+    color: @inverted;
   }
   .toast-dismiss {
     cursor: pointer;
@@ -33,5 +34,32 @@
     box-sizing: border-box;
     font-size: 20px;
     -webkit-text-stroke: 2px @default;
+    color: @inverted;
+    opacity: .7;
+  }
+
+  &.toast-default {
+    .toast-style-mixin(@inverted);
+  }
+  &.toast-primary {
+    .toast-style-mixin(@primary);
+  }
+  &.toast-success {
+    .toast-style-mixin(@success);
+  }
+  &.toast-info {
+    .toast-style-mixin(@info);
+  }
+  &.toast-warning {
+    .toast-style-mixin(@warning);
+  }
+  &.toast-danger {
+    .toast-style-mixin(@danger);
+  }
+
+  .toast-style-mixin(@color) {
+    .toast-icon {
+      color: @color;
+    }
   }
 }
