--- a/src/styles/overlay.less
+++ b/src/styles/overlay.less
@@ -5,6 +5,12 @@
   right: 0;
   bottom: 0;
   z-index: 10;
+  opacity: 0;
+  transition: opacity .15s ease;
+
+  &.overlay-opened {
+    opacity: 1;
+  }
   &.overlay-page {
     position: fixed;
     width: 100vw;
