--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -3,6 +3,8 @@
   color: @inverted;
   height: 125px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
   .header-content {
     display: flex;
     flex-direction: row;
