--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -26,14 +26,8 @@
 @import './footer.less';
 @import './fly.less';
 @import './toast.less';
-
-.row {
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-.page {
-  padding: 30px;
-}
+@import './tabs.less';
+@import './page.less';
 
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
