--- a/src/styles/page.less
+++ b/src/styles/page.less
@@ -4,11 +4,13 @@
   flex-grow: 1;
   & > * {
     display: flex;
+    flex-direction: column;
     &:not(:last-child) {
       flex-grow: 0;
     }
     &:last-child {
       flex-grow: 1;
+      display: block;
     }
   }
 }
