--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -28,6 +28,7 @@
 @import './toast.less';
 @import './tabs.less';
 @import './page.less';
+@import './stories.less';
 
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
