SideMenu component stub.

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -29,6 +29,7 @@
 @import './tabs.less';
 @import './page.less';
 @import './stories.less';
+@import './sidemenu.less';
 
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
