--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -30,3 +30,7 @@
 
 @navbar-height: 60px;
 @footer-height: 40px;
+
+@sidemenu-width: 300px;
+@sidemenu-bg-color: #293135;
+@sidemenu-text-color: darken(@inverted, 10%);
