--- a/src/styles/badge.less
+++ b/src/styles/badge.less
@@ -3,6 +3,7 @@
   padding: 0 7px;
   margin: 5px;
   border-radius: 25px;
+  box-shadow: @shadow;
   &.badge-default {
     .badge-style-mixin(@default);
   }
