--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -1,6 +1,7 @@
 .btn {
   display: inline-block;
   box-sizing: border-box;
+  box-shadow: @shadow;
   position: relative;
   margin: 5px;
   border-radius: @border-radius;
