--- a/src/styles/checkbox.less
+++ b/src/styles/checkbox.less
@@ -2,6 +2,9 @@
   display: inline-block;
   margin: 5px;
   align-self: center;
+  .checkbox-box {
+    box-shadow: @shadow;
+  }
   &:not(.disabled){
     cursor: pointer;
     & * {
