--- a/src/styles/message.less
+++ b/src/styles/message.less
@@ -6,7 +6,7 @@
   border-width: 1px;
   border-style: solid;
   border-left-width: 10px;
-
+  box-shadow: @shadow;
   .message-content {
     display: flex;
     flex-direction: row;
