--- a/src/styles/progress.less
+++ b/src/styles/progress.less
@@ -9,6 +9,7 @@
     background: @progress-bg-color;
     border-radius: 10px;
     width: 100%;
+    box-shadow: @shadow;
     .progress-bar {
       display: block;
       height: 100%;
