--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -5,6 +5,7 @@
   min-width: 300px;
   position: relative;
   margin: 5px;
+  box-shadow: @shadow;
   .is-disabled {
     &>* {
       cursor: not-allowed;
