--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -4,6 +4,7 @@
   margin: 5px;
   background: transparent;
   border-radius: @border-radius;
+  box-shadow: @shadow;
   .fa {
     padding: 0 6px 0 3px;
     cursor: pointer;
