--- a/src/styles/input.less
+++ b/src/styles/input.less
@@ -4,6 +4,7 @@
   margin: 5px;
   margin-right: -12px;
   min-width: 317px;
+  box-shadow: @shadow;
   input {
     display: block;
     outline: none;
