--- a/src/styles/radio-group.less
+++ b/src/styles/radio-group.less
@@ -26,6 +26,7 @@
       border-style: solid;
       border-width: 2px;
       border-radius: 50%;
+      box-shadow: @shadow;
       .radio-check {
         position: absolute;
         top: 3px;
