--- a/src/styles/toggle-switch.less
+++ b/src/styles/toggle-switch.less
@@ -6,9 +6,8 @@
   max-width: 40px;
   margin: 10px 23px;
   border-radius: 10px;
-  border-style: solid;
-  border-width: 1px;
   transition: background-color .1s ease;
+  box-shadow: @shadow;
   &:not(.disabled) {
     cursor: pointer;
   }
@@ -21,10 +20,9 @@
     top: 50%;
     height: 25px;
     width: 25px;
-    border-style: solid;
-    border-width: 1px;
     border-radius: 50%;
     transition: left .2s ease;
+    box-shadow: @shadow;
   }
   &.toggle-switch-default {
     .toggle-switch-style-mixin(@default);
@@ -47,50 +45,36 @@
 
   .toggle-switch-style-mixin(@color) {
     &:not(.disabled) {
-      &.on {
-        box-shadow: inset 0 0 5px darken(@color, 11%);      
+      &.on {    
         background: lighten(@color, 8%);
-        border-color: darken(@color, 2%);
         .toggle-switch-latch {
-          box-shadow: inset 0 0 5px darken(@color, 11%);   
           background: @color;
-          border-color: darken(@color, 6%);
           left: 100%;
           transform: translateX(-50%) translateY(-50%);;
         }
       }
       &.off {
-        box-shadow: inset 0 0 5px darken(@border-color, 8%);
         background: lighten(@border-color, 8%);
-        border-color: @border-color;
         .toggle-switch-latch {
           background: @inverted;
-          border-color: darken(@border-color, 3%);
           left: 0%;
           transform: translateX(-50%) translateY(-50%);
         }
       }
     }
     &.disabled {
-      &.on {
-        box-shadow: inset 0 0 5px tint(darken(@color, 11%));      
+      &.on {   
         background: tint(lighten(@color, 8%));
-        border-color: tint(darken(@color, 2%));
         .toggle-switch-latch {
-          box-shadow: inset 0 0 5px tint(darken(@color, 11%)); 
           background: tint(@color);
-          border-color: tint(darken(@color, 6%));
           left: 100%;
           transform: translateX(-50%) translateY(-50%);;
         }
       }
       &.off {
-        box-shadow: inset 0 0 5px tint(darken(@border-color, 8%));
         background: tint(lighten(@border-color, 8%));
-        border-color: tint(@border-color);
         .toggle-switch-latch {
           background: tint(@inverted);
-          border-color: tint(darken(@border-color, 3%));
           left: 0%;
           transform: translateX(-50%) translateY(-50%);
         }
